src/test/ui/issues/issue-32201.stderr
error[E0617]: can't pass `fn(*const u8) {bar}` to variadic function
  --> $DIR/issue-32201.rs:9:16
   |
LL |         foo(0, bar);
   |                ^^^ help: cast the value to `fn(*const u8)`: `bar as fn(*const u8)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0617`.
